syntax = "proto3";

option go_package = "./pb";

package pb;

message CommandReq {
  string access_token = 2;
}

message CommandResp {
  int32 code = 1;
  string  msg = 2;
  bytes data = 3;
}

service Flowsrv {
  rpc connect(CommandReq) returns (stream CommandResp);
}